--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ img.vector:hover{
 
     margin: 0.8rem auto;
     border-radius: 0.6rem;
-    border: 1px solid black;
+    border: 2px solid black;
 
     overflow: auto;
     overflow: overlay;
@@ -118,11 +118,6 @@ tbody tr {
     transition: .5s ease-in-out var(--delay), background-color 0s;
 }
 
-tbody tr.hide {
-    opacity: 0;
-    transform: translateX(100%);
-}
-
 tbody tr:hover {
     background-color: #2fff55b9 !important;
 }
@@ -131,19 +126,16 @@ tbody tr td {
     transition: .2s ease-in-out;
 }
 
-tbody tr.hide td,
-tbody tr.hide td p {
-    padding: 0;
-    font: 0 / 0 sans-serif;
-    transition: .2s ease-in-out .5s;
-}
-
 @media (max-width: 1000px) {
     td:not(:first-of-type) {
         min-width: 12.1rem;
     }
 }
 
-/* .tdclass{
-    background-color: aliceblue;
-} */
+tbody td:hover{
+    background-color: #f1ffab;
+}
+
+thead th:hover{
+    color: #ff0000;
+}
